--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -828,4 +828,6 @@
 
     <string name="add_to_white_list">Add to white list</string>
     <string name="add_to_black_list">Add to black list</string>
+    <string name="dialog_title">Tip</string>
+
 </resources>
