--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -205,6 +205,7 @@
     <string name="call_settings_label" msgid="7416182166943714852">"通话设置"</string>
     <string name="call_settings_description" msgid="2756622428019213052">"语音信箱、来电等待及其他"</string>
     <string name="select_account_dialog_title">选择账户</string>
+    <string name="dialog_title">提示</string>
 
     <string name="device_id">设备标识符</string>
     <string name="menu_4g_conference_call">4G会议电话</string>
