--- a/InCallUI/res/values-hy-rAM/strings.xml
+++ b/InCallUI/res/values-hy-rAM/strings.xml
@@ -23,7 +23,7 @@
     <string name="private_num" msgid="6713286113000232309">"Գաղտնի համար"</string>
     <string name="payphone" msgid="4793877574636445118">"Բջջային տերմինալ"</string>
     <string name="confCall" msgid="1904840547188336828">"Կոնֆերանս զանգ"</string>
-    <string name="call_lost" msgid="6183862117003999578">"Զանգն ավարտվեց"</string>
+    <string name="call_lost" msgid="6183862117003999578">"Զանգը դադարեցվեց"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Բարձրախոս"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Հեռախոսի ականջակալ"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Լարային ականջակալ"</string>
@@ -85,7 +85,7 @@
     <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"Հնարավոր չէ փոխանջատել զանգը:"</string>
     <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"Հնարավոր չէ առանձնացնել զանգը:"</string>
     <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"Հնարավոր չէ փոխանցել:"</string>
-    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Հնարավոր չէ համամիասնական զանգ կատարել:"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"Հնարավոր չէ խմբային զանգ կատարել:"</string>
     <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"Հնարավոր չէ մերժել զանգը:"</string>
     <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"Հնարավոր չէ անջատել զանգ(եր)ը:"</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP զանգ"</string>
@@ -93,7 +93,7 @@
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Ռադիոն միացվում է..."</string>
     <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"Ծառայությունը մատչելի չէ: Նորից փորձեք…"</string>
     <string name="dial_emergency_error" msgid="1509085166367420355">"Հնարավոր չէ զանգել: <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> համարը արտակարգ իրավիճակի համար չէ:"</string>
-    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Հնարավոր չէ զանգել: Հավաքեք արտակարգ իրավիճակի համարը:"</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"Հնարավոր չէ զանգել: Հավաքեք արտակարգ իրավիճակի որևէ համար:"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Օգտագործեք ստեղնաշարը՝ համարհավաքման համար"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Պահել զանգը"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Վերսկսել զանգը"</string>
