--- a/InCallUI/res/values-zh-rTW/strings.xml
+++ b/InCallUI/res/values-zh-rTW/strings.xml
@@ -83,15 +83,15 @@
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"開始 MMI 序列…"</string>
     <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"不支援的服務。"</string>
     <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"無法切換通話。"</string>
-    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"無法區分通話。"</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"無法分割通話。"</string>
     <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"無法轉接。"</string>
-    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"無法加入會議。"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"無法進行電話會議。"</string>
     <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"無法拒接來電。"</string>
     <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"無法掛斷電話。"</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP 通話"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"緊急電話"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"開啟無線通訊中…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"沒有服務，正在重試…"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"找不到服務訊號，正在重試…"</string>
     <string name="dial_emergency_error" msgid="1509085166367420355">"無法通話。<xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> 不是緊急號碼。"</string>
     <string name="dial_emergency_empty_error" msgid="9130194953830414638">"無法通話。只能撥打緊急號碼。"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"使用鍵盤撥號"</string>
