--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
+  ~ Copyright (C) 2013-2014 The Linux Foundation. All Rights Reserved.
+  ~ Not a Contribution.
   ~ Copyright (C) 2012 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -847,4 +849,8 @@
     <string name="firewall_save_success">Saved successfully</string>
     <string name="firewall_add_blacklist_warning">if you add this number to blacklsit, you will not receive the messages and calls from it</string>
 
+    <string name="set_speed_dial">Speed dial settings</string>
+    <string name="input_number">Input Number</string>
+    <string name="speed_dial_cancel">Cancel</string>
+    <string name="speed_dial_ok">OK</string>
 </resources>
