--- a/InCallUI/res/values-de/strings.xml
+++ b/InCallUI/res/values-de/strings.xml
@@ -67,7 +67,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Mailboxnummer unbekannt"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"kein Dienst"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Ausgewähltes Netzwerk (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) nicht verfügbar"</string>
-    <string name="notification_action_answer" msgid="6700362365135365143">"Antworten"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Annehmen"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Beenden"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Videoanruf"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Nur Audio"</string>
@@ -127,14 +127,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Eigene Antwort schreiben..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Abbrechen"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Senden"</string>
-    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Freisprechfunktion ausgewählt"</string>
-    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Kopfhörer ausgewählt"</string>
-    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Kabelheadset ausgewählt"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth-Headset ausgewählt"</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Anruf stummgeschaltet"</string>
-    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Stummschaltung des Anrufs aufgehoben"</string>
-    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Anruf wird gehalten."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="5107480079544990575">"Anruf wird nicht mehr gehalten."</string>
     <string name="description_target_answer" msgid="7205604197797472471">"Antworten"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS senden"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Ablehnen"</string>
