--- a/InCallUI/res/values-fr/strings.xml
+++ b/InCallUI/res/values-fr/strings.xml
@@ -127,15 +127,7 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Réponse personnalisée..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Annuler"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Envoyer"</string>
-    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Haut-parleur sélectionné"</string>
-    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Écouteur sélectionné"</string>
-    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Casque filaire sélectionné"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Casque Bluetooth sélectionné"</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Son coupé"</string>
-    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Son de l\'appel réactivé"</string>
-    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Appel mis en attente"</string>
-    <string name="accessibility_call_removed_from_hold" msgid="5107480079544990575">"L\'appel n\'est plus en attente."</string>
-    <string name="description_target_answer" msgid="7205604197797472471">"Réponse"</string>
+    <string name="description_target_answer" msgid="7205604197797472471">"Répondre"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Envoyer un SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Refuser"</string>
     <string name="description_target_answer_video_call" msgid="3495965588512395026">"Répondre via un appel vidéo"</string>
