--- a/InCallUI/res/values-pl/strings.xml
+++ b/InCallUI/res/values-pl/strings.xml
@@ -127,15 +127,7 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Napisz własną..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Anuluj"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Wyślij"</string>
-    <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Wybrano głośnik telefonu"</string>
-    <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Wybrano słuchawkę"</string>
-    <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Wybrano przewodowy zestaw słuchawkowy"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Wybrano zestaw słuchawkowy Bluetooth"</string>
-    <string name="accessibility_call_muted" msgid="2776111226185342220">"Połączenie wyciszone."</string>
-    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Połączenie już nie jest ignorowane."</string>
-    <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Połączenie zawieszone."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="5107480079544990575">"Połączenie nie jest już wstrzymane."</string>
-    <string name="description_target_answer" msgid="7205604197797472471">"Odpowiedz"</string>
+    <string name="description_target_answer" msgid="7205604197797472471">"Odbierz"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Wyślij SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Odrzuć"</string>
     <string name="description_target_answer_video_call" msgid="3495965588512395026">"Odbierz jako rozmowę wideo"</string>
