--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -216,4 +216,6 @@
 
     <string name="add_to_white_list">加入白名单</string>
     <string name="add_to_black_list">加入黑名单</string>
+    <string name="video_call">视频电话</string>
+    <string name="menu_add_to_4g_conference_call">加入4G电话会议</string>
 </resources>
