--- a/InCallUI/res/values-am/strings.xml
+++ b/InCallUI/res/values-am/strings.xml
@@ -72,7 +72,7 @@
     <string name="notification_action_answer_video" msgid="7809271910870211729">"ቪዲዮ"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"ድምፅ"</string>
     <string name="notification_action_accept" msgid="2898609801209468429">"ተቀበል"</string>
-    <string name="notification_action_dismiss" msgid="2679969397930852858">"ያጥፉ"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"አሰናብት"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"መልሰህ ደውል"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"መልዕክት"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ለመደወል፣ መጀመሪያየአውሮፕላኑን ሁነታ አጥፋ።"</string>
